# vibesignal

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
src/vibesignal/: __init__.py  __main__.py  cli.py  config.py  workspace.py
src/vibesignal/analysis/: __init__.py  claude_client.py  insights.py
src/vibesignal/generation/: __init__.py  formatter.py  thread.py
src/vibesignal/inspiration/: __init__.py  fourier_portrait.py  quotes.py  visualizer.py
src/vibesignal/models/: __init__.py  cost.py  notebook.py  thread.py
src/vibesignal/output/: __init__.py  writer.py
src/vibesignal/parsing/: __init__.py  extractors.py  notebook.py
src/vibesignal/preview/: __init__.py  html.py  terminal.py
src/vibesignal/publishing/: __init__.py  twitter.py
src/vibesignal/rendering/: __init__.py  math_renderer.py
tests/: __init__.py  conftest.py  test_integration.py
tests/fixtures/: sample_notebook.ipynb
tests/test_analysis/: test_claude_client.py
tests/test_generation/: __init__.py  test_thread.py
tests/test_models/: __init__.py  test_cost.py
tests/test_parsing/: test_notebook.py
